[project]
name = "langchain-google-alloydb-pg"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud AlloyDB for PostgreSQL"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "google-cloud-alloydb-connector[asyncpg]>=1.2.0, <2.0.0",
    "google-cloud-storage>=2.18.2, <4.0.0",
    "numpy>=1.24.4, <3.0.0; python_version >= '3.11'",
    "numpy>=1.24.4, <=2.2.6; python_version == '3.10'",
    "numpy>=1.24.4, <=2.0.2; python_version <= '3.9'",
    "langchain-postgres>=0.0.15",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_alloydb_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-alloydb-pg-python"
Repository = "https://github.com/googleapis/langchain-google-alloydb-pg-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-alloydb-pg-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-alloydb-pg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langgraph = [
    "langgraph-checkpoint>=2.0.9, <3.0.0"
]

test = [
    "black[jupyter]==25.1.0",
    "isort==7.0.0",
    "langgraph==0.6.5",
    "mypy==1.17.1",
    "pytest-asyncio==0.26.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-depends==1.0.1",
    "Pillow==11.3.0",
    "langchain-tests==0.3.20"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
